--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,13 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.player-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.player {
+  margin: 10px;
+}
