handles players that don't exist

--- a/src/App.css
+++ b/src/App.css
@@ -35,4 +35,8 @@
 
 .player {
   margin: 10px;
+  padding: 10px;
+  font-family: 'Luckiest Guy', cursive;
+  border: solid 1px black;
+  /* font-family: 'Open Sans', sans-serif; */
 }
