removing searched players from list

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,14 @@
 .player {
   margin: 10px;
   padding: 10px;
+  width: 200px;
   font-family: 'Luckiest Guy', cursive;
   border: solid 1px black;
   /* font-family: 'Open Sans', sans-serif; */
+}
+
+.player-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
