--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: 'Luckiest Guy', cursive;
 }
 
 .App-logo {
@@ -37,7 +38,6 @@
   margin: 10px;
   padding: 10px;
   width: 200px;
-  font-family: 'Luckiest Guy', cursive;
   border: solid 1px black;
   /* font-family: 'Open Sans', sans-serif; */
 }
@@ -46,4 +46,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.stats {
+  font-family: 'Open Sans', sans-serif;
 }
