--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,23 @@
 .imageAnchor:focus img{
     border: 2px solid #66AFE9;;
 }
+
+.Player-enter {
+  opacity: 0.01;
+  transform: translateY(200px);
+}
+
+.Player-enter.Player-enter-active {
+  opacity: 1;
+  transform: translateY(0px);
+  transition: opacity 500ms ease-in;
+}
+
+.Player-leave {
+  opacity: 1;
+}
+
+.Player-leave.Player-leave-active {
+  opacity: 0.01;
+  transition: opacity 500ms ease-in;
+}
