working on player card aesthetic

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   to { transform: rotate(360deg); }
 }
 
+.remove-player {
+  float: right;
+}
+
 .player-list {
   display: flex;
   flex-direction: row;
